--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
 
+    <!-- Titles Font Family  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap" 
+    rel="stylesheet"> 
+
     <!-- bootstrap -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous" /> -->
 
     <!-- custom style -->
     <link rel="stylesheet" href="./css/style.css" />
@@ -33,11 +39,15 @@
     <!-- Custom JS -->
     <script src="js/main.js" defer></script>
   </head>
-  <body>
+  <body> 
 
-    <script
+    <header>
+      <div class="page-title">ESTATE '24</div>
+    </header>
+
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
   </body>
 </html>
