--- a/index.html
+++ b/index.html
@@ -42,8 +42,24 @@
   <body> 
 
     <header>
-      <div class="page-title">ESTATE '24</div>
+      <div class="title page-title">ESTATE '24</div>
     </header>
+
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <div class="card-img"></div>
+              <div class="card-body">
+                <div class="date"></div>
+                <div class="title card-title"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
