--- a/index.html
+++ b/index.html
@@ -48,15 +48,39 @@
     <main>
       <div class="container">
         <div class="row">
+
           <div class="col">
             <div class="card">
-              <div class="card-img"></div>
+              <img src="./img/randompic.jpg" alt="randompic">
               <div class="card-body">
-                <div class="date"></div>
-                <div class="title card-title"></div>
+                <div class="date">10/10/2001</div>
+                <div class="title card-title">RANDOM PIC</div>
               </div>
             </div>
           </div>
+
+          <div class="col">
+            <div class="card">
+              <img src="./img/randompic.jpg" alt="randompic">
+              <div class="card-body">
+                <div class="date">10/10/2001</div>
+                <div class="title card-title">RANDOM PIC</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <img src="./img/randompic.jpg" alt="randompic">
+              <div class="card-body">
+                <div class="date">10/10/2001</div>
+                <div class="title card-title">RANDOM PIC</div>
+              </div>
+            </div>
+          </div>
+
+         
+
         </div>
       </div>
     </main>
