--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
           <div class="col">
             <div class="card">
+              <img class="pin" src="./img/pin.svg" alt="pin">
               <img src="./img/randompic.jpg" alt="randompic">
               <div class="card-body">
                 <div class="date">10/10/2001</div>
@@ -61,6 +62,7 @@
 
           <div class="col">
             <div class="card">
+              <img class="pin" src="./img/pin.svg" alt="pin">
               <img src="./img/randompic.jpg" alt="randompic">
               <div class="card-body">
                 <div class="date">10/10/2001</div>
@@ -71,6 +73,7 @@
 
           <div class="col">
             <div class="card">
+              <img class="pin" src="./img/pin.svg" alt="pin">
               <img src="./img/randompic.jpg" alt="randompic">
               <div class="card-body">
                 <div class="date">10/10/2001</div>
