--- a/index.html
+++ b/index.html
@@ -46,46 +46,7 @@
     </header>
 
     <main>
-      <div class="container">
-        <div class="row">
-
-          <div class="col">
-            <div class="card">
-              <img class="pin" src="./img/pin.svg" alt="pin">
-              <img src="./img/randompic.jpg" alt="randompic">
-              <div class="card-body">
-                <div class="date">10/10/2001</div>
-                <div class="title card-title">RANDOM PIC</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card">
-              <img class="pin" src="./img/pin.svg" alt="pin">
-              <img src="./img/randompic.jpg" alt="randompic">
-              <div class="card-body">
-                <div class="date">10/10/2001</div>
-                <div class="title card-title">RANDOM PIC</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card">
-              <img class="pin" src="./img/pin.svg" alt="pin">
-              <img src="./img/randompic.jpg" alt="randompic">
-              <div class="card-body">
-                <div class="date">10/10/2001</div>
-                <div class="title card-title">RANDOM PIC</div>
-              </div>
-            </div>
-          </div>
-
-         
-
-        </div>
-      </div>
+      <div id="container"></div>
     </main>
 
     <!-- <script
