--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
       <div class="title page-title">ESTATE '24</div>
     </header>
 
-    <main>
+    <main id="page-content">
+      <div class="overlay d-none">
+        <button id="close-button">Chiudi</button>
+      </div>
       <div id="container"></div>
     </main>
 
